@@ -14,6 +14,7 @@
 * Support extraction of BZIP2 (.bz2) files with the Python bz2 module.
 * Support extraction of GZIP (.gz) files with the Python gzip module.
 * Support extraction of ZIP (.zip) files with the Python zipfile module.
+* Support extraction of TAR (.tar) files with the Python tarfile module.
 
 
 0.15 "Contraband" (released 8.4.2012)
